# UEd-AITutor

./: .gitignore  Procfile  requirements.txt
ai-tutor/ai-tutor/: ai_feedback.py  app.py  grade.py
ai-tutor/ai-tutor/JudgeMaster/: app.py  pyproject.toml
ai-tutor/ai-tutor/JudgeMaster/static/css/: style.css
ai-tutor/ai-tutor/JudgeMaster/static/js/: app.js  main.js
ai-tutor/ai-tutor/JudgeMaster/templates/: assignments.html  base.html  dashboard.html  error.html  login.html  practice.html  profile.html  register.html  results.html  settings.html
ai-tutor/ai-tutor/problems/: factorial.json
ai-tutor/ai-tutor/student-management/: index.html
ai-tutor/ai-tutor/student-management/css/: styles.css
ai-tutor/ai-tutor/student-management/js/: app.js  auth.js  data-manager.js  utils.js
ai-tutor/ai-tutor/submissions/: student_temp.py
ai-tutor/ai-tutor/templates/: chat.html  chat1.html  index.html
